src/App.css
/* App.css */

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Oswald:wght@400;700&family=Rubik:wght@400;700&display=swap');

body {
  background-color: #231F20;
  color: #B6B6B6;
  font-family: 'Lato', sans-serif;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.app-header {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 20px 0;
}

.app-header img {
  width: 200px;
  margin-bottom: 20px;
}

h1 {
  color: #70C7BA;
  font-family: 'Rubik', sans-serif;
}

.kas-price h2 {
  color: #49EACB;
  font-family: 'Oswald', sans-serif;
  margin: 10px 0;
}

.balance-container h3 {
  font-family: 'Oswald', sans-serif;
}

.error-message {
  color: red;
  margin-top: 20px;
}

